<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InteradTestProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_payment_cards">PaymentCardsActivity</string>
    <string name="title_activity_gift_cards">GiftCardsActivity</string>
    <string name="title_activity_loyalty_cards">LoyaltyCardsActivity</string>
    <string name="card_balance">Balance: </string>
    <string name="card_credit">Available Credit: </string>
    <string name="card_value">Value: </string>
    <string name="card_holder_name">Holder Name: </string>
    <string name="title_activity_Wallet">Wallet</string>
    <string name="title_activity_help">How do I pay?</string>
    <string name="title_activity_my_bank">My bank</string>
    <string name="title_activity_setting">Settings</string>
    <string name="user_name">User Name: </string>
    <string name="user_name_hint">Input user name</string>
    <string name="password">Password: </string>
    <string name="password_hint">password</string>
    <string name="login">Login</string>
    <string name="forgot_psw">Forgot Password</string>
    <string name="setting_my_account">My Account</string>
    <string name="setting_notifications">Notificiations</string>
    <string name="setting_privacy">Privacy</string>
    <string name="setting_General">General</string>
    <string name="setting_about">About</string>

    <color name="tabs">#a0a4aa</color>
    <color name="tab_content">#ffffff</color>
    <color name="card_text">#5e6370</color>
    <color name="card_number">#a0a4aa</color>
    <color name="btn_background">#ececed</color>
    <color name="list_divider">#272727</color>
    <color name="list_background">#303030</color>
    <color name="list_background_pressed">#992416</color>
    <color name="list_item_title">#fff</color>
    <color name="counter_text_color">#c5c4c4</color>
    <color name="counter_text_bg">#626262</color>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Wallet</item>
        <item>How do I pay?</item>
        <item>My bank</item>
        <item>Settings</item>
    </string-array>

</resources>
