<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Framelayout to display Fragments -->
    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
       <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/ivBankLogo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:src="@drawable/rbc_bank_logo" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivBankLogo"
                android:layout_marginTop="40dp"
                android:layout_marginStart="15dp"
                android:text="@string/user_name"
                android:textColor="@color/card_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tvUserName"
                android:layout_toEndOf="@+id/tvUserName"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/user_name_hint"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvUserName"
                android:layout_marginTop="10dp"
                android:layout_alignStart="@+id/tvUserName"
                android:text="@string/password"
                android:textColor="@color/card_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tvPassword"
                android:layout_alignStart="@+id/etUserName"
                android:layout_toEndOf="@+id/tvPassword"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btLogin"
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:layout_centerInParent="true"
                android:layout_below="@+id/etPassword"
                android:layout_marginTop="15dp"
                android:textColor="@color/card_text"
                android:background="@color/btn_background"
                android:text="@string/login"
                android:onClick="onLoginClick" />

            <Button
                android:id="@+id/btForgotPwd"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_below="@+id/btLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textColor="@color/card_text"
                android:background="@color/btn_background"
                android:text="@string/forgot_psw"
                android:onClick="onForgotPwdClick" />
            
        </RelativeLayout>
        
        
    </FrameLayout>

    <!-- Listview to display slider menu -->
    <ListView
        android:id="@+id/list_slidermenu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp"        
        android:listSelector="@drawable/list_selector"
        android:background="@color/list_background"/>
</android.support.v4.widget.DrawerLayout>
